--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ## default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
+logging.file.name=logs/mylog.log
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/reporter
+spring.datasource.url=jdbc:postgresql://localhost:5432/reporter1
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=12345678
 
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
