Added date-time form Modified controller, service and queries for work with date-time data Tests and logs modified for work with date-time data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 logging.file.name=logs/mylog.log
-
+logging.level.root=INFO
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/reporter1
 spring.datasource.username=postgres
