--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>42.2.18</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.4</version>
+        </dependency>
+
 
 
 
